fix: readable content code block colors

--- a/src/azion/extended-components/_markdown.scss
+++ b/src/azion/extended-components/_markdown.scss
@@ -1,5 +1,5 @@
 .prose {
-  *:not(p, a, li) {
+  *:not(p, a, li, span) {
     color: var(--text-color) !important;
   }
 
